Popup component changes with right panel

--- a/src/app/right-panel/right-panel.component.html
+++ b/src/app/right-panel/right-panel.component.html
@@ -1,22 +1,30 @@
 <div class="rightPanel">
     <div class="itemsContainer">
         <div>
-            <mat-icon >keyboard_double_arrow_down</mat-icon>
+           <img src="/assets/images/codicon_fold-up.svg" />
     
         </div>
-        <div>
-            <mat-icon > blur_circular</mat-icon>
+        <div class="item" (click)="openDialog()">
+            <img src="/assets/images/logos_linear-icon.svg" />
+            <span class="itemName">
+                Properties
+
+            </span>
            
-            Properties
+           
     
         </div>
-        <div>
-            <mat-icon > blur_circular</mat-icon>
-           Warning
+        <div class="item">
+            <img src="/assets/images/logos_linear-icon.svg" />
+            <span class="itemName">
+                Warning
+
+            </span>
+           
     
         </div>
-        <div>
-            <mat-icon >code</mat-icon>
+        <div class="item">
+            <img src="/assets/images/code.svg" />
     
         </div>
 
