--- a/src/app/right-panel/right-panel.component.scss
+++ b/src/app/right-panel/right-panel.component.scss
@@ -3,5 +3,29 @@
 
     .itemsContainer{
         display: flex;
+        border-radius: 15px 0px 0px 15px;
+border: 1px solid #D9D9D9;
+background: #FFF;
+padding: 13px 0px 13px 13px;
+    gap: 12px;
+    align-items: center;
+    margin-right: -3px;
+
+    .item{
+        border-radius: 4px 0px 0px 4px;
+    border: 1px solid #979797;
+    padding: 6px;
+
+    .itemName{
+        color: #979797;
+font-family: "DM Sans";
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 30px; /* 187.5% */
+letter-spacing: -0.32px;
     }
 }
+    }
+}
+
