header, left side panel, tree

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="headerContainer">
+    <div class="softwareName">
+        Software A
+    </div>
+    <div class="headerMenuContainer">
+        <div>
+            <img src="/assets/images/header-menu.svg" />
+        </div>
+        <div>
+            <img src="/assets/images/profile-menu.svg" />
+        </div>
+    </div>
+</div>
