--- a/src/app/text-editor/text-editor.component.html
+++ b/src/app/text-editor/text-editor.component.html
@@ -1,6 +1,7 @@
 <div class="textEditorContainer">
     <div>
         <textarea rows="50" cols="30"></textarea>
+        <!-- <textarea id="editor" name="editor"></textarea> -->
     </div>
     <div class="rightPanelContainer">
         <app-right-panel></app-right-panel>
