--- a/src/app/left-panel/left-panel.component.html
+++ b/src/app/left-panel/left-panel.component.html
@@ -1,1 +1,83 @@
-<p>left-panel works!</p>
+@if (isLeftPanelCollapsed) {
+    <div class="verticalMenuContainer">
+        
+        <div>
+            <img src="assets/images/project.svg" />
+        </div>
+        <div>
+            <img src="assets/images/git.svg" />
+        </div>
+        <div>
+            <img src="assets/images/search.svg" />
+        </div>
+        <div>
+            <img src="assets/images/plugins.svg" />
+        </div>
+        <div (click)="handleExpandCollapse()">
+            <img src="assets/images/settings.svg" />
+        </div>
+
+    </div>
+}
+@else {
+    <div class="horizontalMenuContainer">
+        <div class="menuItemsContainer">
+            <div>
+                <img src="assets/images/project.svg" />
+            </div>
+            <div>
+                <img src="assets/images/git.svg" />
+            </div>
+            <div>
+                <img src="assets/images/search.svg" />
+            </div>
+            <div>
+                <img src="assets/images/plugins.svg" />
+            </div>
+            <div (click)="handleExpandCollapse()">
+                <img src="assets/images/settings.svg" />
+            </div>
+
+        </div>
+        <div>
+            <div class="titleContainer">
+                <img src="assets/images/material-symbols_list.svg" />
+                <span class="title">
+                    Brake System
+                </span>
+            </div>
+        </div>
+        <div>
+            <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
+                <!-- This is the tree node template for leaf nodes -->
+                <!-- There is inline padding applied to this node using styles.
+                  This padding value depends on the mat-icon-button width. -->
+                <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+                    {{node.name}}
+                </mat-tree-node>
+                <!-- This is the tree node template for expandable nodes -->
+                <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+                    <div class="mat-tree-node">
+                      <button mat-icon-button matTreeNodeToggle
+                              [attr.aria-label]="'Toggle ' + node.name">
+                        <mat-icon class="mat-icon-rtl-mirror">
+                          {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                        </mat-icon>
+                      </button>
+                      {{node.name}}
+                    </div>
+                    <!-- There is inline padding applied to this div using styles.
+                        This padding value depends on the mat-icon-button width.  -->
+                    <div [class.example-tree-invisible]="!treeControl.isExpanded(node)"
+                        role="group">
+                      <ng-container matTreeNodeOutlet></ng-container>
+                  </div>
+                </mat-nested-tree-node>
+              </mat-tree>
+              
+        </div>
+        
+    </div>
+
+}
+
