Adding resize changes

--- a/src/app/text-editor/text-editor.component.scss
+++ b/src/app/text-editor/text-editor.component.scss
@@ -44,6 +44,7 @@
 
         .editorContainers{
             display: flex;
+            overflow: auto;
 
             .editor{
                 resize: both;
